Aggiunta classe Table e funzioni per calcolare le carte vinte per i rispettivi giochi